--- a/E-commerce.html
+++ b/E-commerce.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width initial-scale=1.0">
             <title>Nike Store</title>
-            <link rel="stylesheet" href="E-commerce.css">
+            <link rel="stylesheet" href="E-Commerce/E-commerce.css">
         </head>
         <body>
             <nav id="nav">
@@ -224,6 +224,6 @@
                 <p class="copyrights">@Ranjith Velliangiri.All rights reserved.2024</p>
             </div>
         </footer>
-            <script src="E-commerce.js"></script>
+            <script src="E-Commerce/E-commerce.js"></script>
         </body>
     </html>
