--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <nav id="nav">
                 <div class="navTop">
                     <div class="navItem">
-                        <img src="image/logo.jpg" alt="sneaker-logo" class="logo">
+                        <img src="logo.jpg" alt="sneaker-logo" class="logo">
                     </div>
                     <div class="navItem">
                         <div class="search">
